--- a/src/app/components/masters/brandlogo/brandlogo.component.html
+++ b/src/app/components/masters/brandlogo/brandlogo.component.html
@@ -33,7 +33,7 @@
                                 <button type="submit" class="btn btn-primary" [disabled]="addForm.invalid">{{buttonText}}</button>
                             </div>
                             <div class="pull-right mr-2">
-                                <button type="submit" class="btn btn-danger" (click)="cancel()">Cancel Form</button>
+                                <button type="submit" class="btn btn-danger" (click)="cancelForm()">Cancel Form</button>
                             </div>
 
                         </form>
